# PhoneMediaSync

./: .clang-format  CMakeLists.txt  README.md
inc/: Logger.hpp  Server.hpp  SocketMonitor.hpp  Types.hpp
src/: Server.cpp  SocketMonitor.cpp  main.cpp
